edit the task folder

--- a/Task/index.html
+++ b/Task/index.html
@@ -14,7 +14,7 @@
     <div>
       <header>
         <nav>
-          <span>1</span>
+          <span class="cart">1</span>
           <i class="fa-solid fa-cart-shopping"></i>
           <p>Home</p>
           <p class="contact">Contact Us</p>
@@ -22,13 +22,9 @@
       </header>
 
       <main>
-        <div class="img">
-          <h1>My Mart</h1>
+        <!-- <div class="img"> -->
+          <h1><span class="white">M</span>y <span class="white">M</span>art</h1>
         </div>
-        <!-- <div class="search">
-          <div class="find">Find your favorite</div>
-          <button class="btn">Search</button>
-        </div> -->
 
         <div class="search-container">
           <input
@@ -47,41 +43,68 @@
                 src="https://s3-alpha-sig.figma.com/img/55dc/cf92/71625a611101e66f079d5d04ae8cbb17?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I8iE49jtweaWpxWkiE3EapOd5FKkJ8GYc3LmUQzF2JCttpR2ofM77Pg5hZSdous7hJmpsdatR4Gq88ctSPDr1vX~QLOL0SBHuc6AFxHejHHQcK4-RfELcxfi6kHTmZf2iWX6yMORUMLOte0VkmsK-zvDqy-j~Gs1GG~8osG-ND34lkjmeEHILDTsiATL7pZklDZjiKFeEUc6b2iE8xu6qU4xjShQGF9Um6n4olNIE3~i66Mw9pqejuJNEVSObJaNj~oefEYIjVYrOq1txEZayoVoF3dfvrfuDsWejz9-a2CnQyGPhV9nsodd88fpxIyz9C9qadK13fS49GHmwHfxxw__"
                 alt=""
               />
+              <div class="number">1</div>
+              <div class="overlay">Solid lycra polo ...</div>
               <button class="btn2">Add to cart</button>
             </div>
+
             <div class="items">
               <img
                 src="https://s3-alpha-sig.figma.com/img/3036/7bfe/4a45e8b3e0cfdf4f68902e3df043cf02?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ns2qld4AV54z0qP8JiwW37mWeuvXo4JeQdlh5ral1pwSijUMKKAmwQmUDW~q7owCTVX8bVf-sF1dwxw-qU9AwfK0tKtIvMOF4Li7plp4gqvM3JZvNsGuU7EabD2~mRhNBS9RPzG9T84~qkA~0keyhl6AHA5TVm6vnFFUXxFOT-y6caMDtCWMsWAolJV-xskzmWQYBfPVjXrtn~A9S449OssO~43mQVfGSggOHT9NQ-ORuPDIfsfDUALifVL525mZ5bfVko4cVShSPdlkZ2y-c~9sIYFqvKjdcgzlu4GM~gccDKbJZcPP-wF2vd~zOpp9fLgS0wDpkoGTfgIfMsEHQQ__"
                 alt=""
               />
+              <div class="number">2</div>
+              <div class="overlay">Dio shirts</div>
               <button class="btn2">Add to cart</button>
             </div>
+
             <div class="items">
               <img
                 src="https://s3-alpha-sig.figma.com/img/55dc/cf92/71625a611101e66f079d5d04ae8cbb17?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I8iE49jtweaWpxWkiE3EapOd5FKkJ8GYc3LmUQzF2JCttpR2ofM77Pg5hZSdous7hJmpsdatR4Gq88ctSPDr1vX~QLOL0SBHuc6AFxHejHHQcK4-RfELcxfi6kHTmZf2iWX6yMORUMLOte0VkmsK-zvDqy-j~Gs1GG~8osG-ND34lkjmeEHILDTsiATL7pZklDZjiKFeEUc6b2iE8xu6qU4xjShQGF9Um6n4olNIE3~i66Mw9pqejuJNEVSObJaNj~oefEYIjVYrOq1txEZayoVoF3dfvrfuDsWejz9-a2CnQyGPhV9nsodd88fpxIyz9C9qadK13fS49GHmwHfxxw__"
                 alt=""
               />
+              <div class="number">3</div>
+              <div class="overlay">Solid lycra polo ...</div>
               <button class="btn2">Add to cart</button>
             </div>
+
             <div class="items">
               <img
                 src="https://s3-alpha-sig.figma.com/img/3036/7bfe/4a45e8b3e0cfdf4f68902e3df043cf02?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ns2qld4AV54z0qP8JiwW37mWeuvXo4JeQdlh5ral1pwSijUMKKAmwQmUDW~q7owCTVX8bVf-sF1dwxw-qU9AwfK0tKtIvMOF4Li7plp4gqvM3JZvNsGuU7EabD2~mRhNBS9RPzG9T84~qkA~0keyhl6AHA5TVm6vnFFUXxFOT-y6caMDtCWMsWAolJV-xskzmWQYBfPVjXrtn~A9S449OssO~43mQVfGSggOHT9NQ-ORuPDIfsfDUALifVL525mZ5bfVko4cVShSPdlkZ2y-c~9sIYFqvKjdcgzlu4GM~gccDKbJZcPP-wF2vd~zOpp9fLgS0wDpkoGTfgIfMsEHQQ__"
                 alt=""
               />
+              <div class="number">4</div>
+              <div class="overlay">Dio shirts</div>
               <button class="btn2">Add to cart</button>
             </div>
+
             <div class="items">
               <img
                 src="https://s3-alpha-sig.figma.com/img/55dc/cf92/71625a611101e66f079d5d04ae8cbb17?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I8iE49jtweaWpxWkiE3EapOd5FKkJ8GYc3LmUQzF2JCttpR2ofM77Pg5hZSdous7hJmpsdatR4Gq88ctSPDr1vX~QLOL0SBHuc6AFxHejHHQcK4-RfELcxfi6kHTmZf2iWX6yMORUMLOte0VkmsK-zvDqy-j~Gs1GG~8osG-ND34lkjmeEHILDTsiATL7pZklDZjiKFeEUc6b2iE8xu6qU4xjShQGF9Um6n4olNIE3~i66Mw9pqejuJNEVSObJaNj~oefEYIjVYrOq1txEZayoVoF3dfvrfuDsWejz9-a2CnQyGPhV9nsodd88fpxIyz9C9qadK13fS49GHmwHfxxw__"
                 alt=""
               />
+              <div class="number">5</div>
+              <div class="overlay">Solid lycra polo ...</div>
               <button class="btn2">Add to cart</button>
             </div>
+
             <div class="items">
               <img
                 src="https://s3-alpha-sig.figma.com/img/3036/7bfe/4a45e8b3e0cfdf4f68902e3df043cf02?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=ns2qld4AV54z0qP8JiwW37mWeuvXo4JeQdlh5ral1pwSijUMKKAmwQmUDW~q7owCTVX8bVf-sF1dwxw-qU9AwfK0tKtIvMOF4Li7plp4gqvM3JZvNsGuU7EabD2~mRhNBS9RPzG9T84~qkA~0keyhl6AHA5TVm6vnFFUXxFOT-y6caMDtCWMsWAolJV-xskzmWQYBfPVjXrtn~A9S449OssO~43mQVfGSggOHT9NQ-ORuPDIfsfDUALifVL525mZ5bfVko4cVShSPdlkZ2y-c~9sIYFqvKjdcgzlu4GM~gccDKbJZcPP-wF2vd~zOpp9fLgS0wDpkoGTfgIfMsEHQQ__"
                 alt=""
               />
+              <div class="number">6</div>
+              <div class="overlay">Dio shirts</div>
+              <button class="btn2">Add to cart</button>
+            </div>
+
+            <div class="items">
+              <img
+                src="https://s3-alpha-sig.figma.com/img/55dc/cf92/71625a611101e66f079d5d04ae8cbb17?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I8iE49jtweaWpxWkiE3EapOd5FKkJ8GYc3LmUQzF2JCttpR2ofM77Pg5hZSdous7hJmpsdatR4Gq88ctSPDr1vX~QLOL0SBHuc6AFxHejHHQcK4-RfELcxfi6kHTmZf2iWX6yMORUMLOte0VkmsK-zvDqy-j~Gs1GG~8osG-ND34lkjmeEHILDTsiATL7pZklDZjiKFeEUc6b2iE8xu6qU4xjShQGF9Um6n4olNIE3~i66Mw9pqejuJNEVSObJaNj~oefEYIjVYrOq1txEZayoVoF3dfvrfuDsWejz9-a2CnQyGPhV9nsodd88fpxIyz9C9qadK13fS49GHmwHfxxw__"
+                alt=""
+              />
+              <div class="number">7</div>
+              <div class="overlay">Solid lycra polo ...</div>
               <button class="btn2">Add to cart</button>
             </div>
           </div>
