--- a/Task/index.html
+++ b/Task/index.html
@@ -13,8 +13,8 @@
   <body>
     <div>
       <header>
-        <nav>
-          <span class="cart">1</span>
+        <nav class="navBar">
+          <!-- <span class="cart">1</span> -->
           <i class="fa-solid fa-cart-shopping"></i>
           <p>Home</p>
           <p class="contact">Contact Us</p>
@@ -38,7 +38,7 @@
         <div>
           <h2>T - shirt</h2>
           <div class="container">
-            <div class="items">
+            <!-- <div class="items">
               <img
                 src="https://s3-alpha-sig.figma.com/img/55dc/cf92/71625a611101e66f079d5d04ae8cbb17?Expires=1737331200&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4&Signature=I8iE49jtweaWpxWkiE3EapOd5FKkJ8GYc3LmUQzF2JCttpR2ofM77Pg5hZSdous7hJmpsdatR4Gq88ctSPDr1vX~QLOL0SBHuc6AFxHejHHQcK4-RfELcxfi6kHTmZf2iWX6yMORUMLOte0VkmsK-zvDqy-j~Gs1GG~8osG-ND34lkjmeEHILDTsiATL7pZklDZjiKFeEUc6b2iE8xu6qU4xjShQGF9Um6n4olNIE3~i66Mw9pqejuJNEVSObJaNj~oefEYIjVYrOq1txEZayoVoF3dfvrfuDsWejz9-a2CnQyGPhV9nsodd88fpxIyz9C9qadK13fS49GHmwHfxxw__"
                 alt=""
@@ -106,10 +106,28 @@
               <div class="number">7</div>
               <div class="overlay">Solid lycra polo ...</div>
               <button class="btn2">Add to cart</button>
-            </div>
+            </div> -->
           </div>
         </div>
       </main>
     </div>
+
+    <div class="cart-item hidden">
+      <div class="close"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#999999"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></div>
+      <div class="cart-items">
+      <!-- <div class="items">
+        <span>1.</span>
+          <span>Solid lycra polo ...</span>
+          <h5>Quantity: 1</h4>
+      </div>
+      <div class="items">
+        <span>2.</span>
+          <span>Dio shirts</span>
+          <h5>Quantity: 2</h4>
+      </div> -->
+    </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
